src/main/resources/azure-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee-container
          image: acrlndqa.azurecr.io/laukendrasingh/employee:55
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: employee-loadbalancer
spec:
  selector:
    app: employee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: employee-clusterip
spec:
  selector:
    app: employee
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
