src/main/resources/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msv-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: alert-clusterip
                port:
                  number: 80
            path: /alert(/|$)(.*)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: employee-clusterip
                port:
                  number: 80
            path: /employee(/|$)(.*)
            pathType: ImplementationSpecific
